samples/_failures_safe/1761560135_cc413c_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_9f3e0906.c: In function ‘main’:
./samples/SAFE/__tmp_9f3e0906.c:139:5: error: expected expression at end of input
  139 |     if (mat2.data == NULL)
      |     ^~
./samples/SAFE/__tmp_9f3e0906.c:139:5: error: expected declaration or statement at end of input
